проверка по ПП десктопной версии

--- a/source/index.html
+++ b/source/index.html
@@ -486,18 +486,20 @@
               <p>Безлимитный абонемент в тренажерный зал</p>
               <a class="promo__button promo__button--white button" href="#">подробнее</a>
             </div>
-            <picture>
-              <source type="image/webp" media="(max-width: 767px)"
-                srcset="img/promo-image-mobile.webp 1x, img/promo-image-mobile@2x.webp 2x">
-              <source type="image/webp" media="(max-width: 767px)"
-                srcset="img/promo-image-mobile.png 1x, img/promo-image-mobile@2x.png 2x">
-              <source type="image/webp" media="(max-width: 1365px)"
-                srcset="img/promo-image-tablet.webp 1x, img/promo-image-tablet@2x.webp 2x">
-              <source type="image/webp" media="(max-width: 1365px)"
-                srcset="img/promo-image-tablet.png 1x, img/promo-image-tablet@2x.png 2x">
-              <img src="img/promo-image-desktop.png" srcset="img/promo-image-desktop.png 2x" width="280" height="462"
-                alt="">
-            </picture>
+            <div class="promo__image-wrapper">
+              <picture>
+                <source type="image/webp" media="(max-width: 767px)"
+                  srcset="img/promo-image-mobile.webp 1x, img/promo-image-mobile@2x.webp 2x">
+                <source type="image/webp" media="(max-width: 767px)"
+                  srcset="img/promo-image-mobile.png 1x, img/promo-image-mobile@2x.png 2x">
+                <source type="image/webp" media="(max-width: 1365px)"
+                  srcset="img/promo-image-tablet.webp 1x, img/promo-image-tablet@2x.webp 2x">
+                <source type="image/webp" media="(max-width: 1365px)"
+                  srcset="img/promo-image-tablet.png 1x, img/promo-image-tablet@2x.png 2x">
+                <img src="img/promo-image-desktop.png" srcset="img/promo-image-desktop.png 2x" width="280" height="462"
+                  alt="">
+              </picture>
+            </div>
           </div>
           <div class="promo__offer-wrapper">
             <div class="promo__offer">
