--- a/source/index.html
+++ b/source/index.html
@@ -559,7 +559,7 @@
                     полотенца, прошедшие термообработку</p>
                 </li>
                 <li data-target="accordion">
-                  <h5>Сколько тренеров работает в клубе и какова их квалификация?</h5>
+                  <h5>Сколько тренеров работает в клубе и какова <br class="faq__line-breaker"> их квалификация?</h5>
                   <button class="faq__button button">Закрытая Информация</button>
                   <p>в нашем клубе работает 8 тренеров, из которых 7 мастеров спорта и 1 победительница чемпионата мира
                     по
@@ -665,7 +665,7 @@
       <section class="reviews-swiper">
         <h2 class="swiper-title">Отзывы</h2>
         <div class="reviews-container container" data-swiper="review-container">
-          <button class="swiper-button-prev button" data-swiper="button-prev">
+          <button class="swiper-button-prev button reviews-button-prev" data-swiper="button-prev">
             <svg width="18" height="34">
               <use href="img/sprite.svg#arrow"></use>
             </svg>
@@ -709,7 +709,7 @@
               </div>
             </div>
           </div>
-          <button class="swiper-button-next button" data-swiper="button-next">
+          <button class="swiper-button-next button reviews-button-next" data-swiper="button-next">
             <svg width="18" height="34">
               <use href="img/sprite.svg#arrow"></use>
             </svg>
@@ -767,7 +767,9 @@
           </div>
         </div>
         <nav class="footer__nav nav">
-          <span class="nav__title">Supergym</span>
+          <a class="nav__image" href="#">
+            <img src="img/main-logo.png" alt="" srcset="img/main-logo@2x.png" width="109" height="24">
+          </a>
           <ul class="nav__user-list">
             <li class="nav__user-item"><a class="nav__user-link" href="#">Услуги</a></li>
             <li class="nav__user-item"><a class="nav__user-link" href="#">Абонементы</a></li>
