начинаем ПП для мобилки

--- a/source/index.html
+++ b/source/index.html
@@ -55,8 +55,8 @@
               <li>Кардио-зона</li>
             </ul>
             <h2>Фитнес Центр</h2>
-            <a class="intro__button-link" href="#subscription">
-              <button class="intro__button button" type="submit">Купить абонемент</button>
+            <a class="intro__button button" href="#subscription">
+              Купить абонемент
             </a>
           </div>
           <picture>
@@ -169,14 +169,14 @@
           </div>
         </div>
         <div class="subscription__after-image">
-        <picture>
-          <source type="image/webp" media="(max-width: 1365px)"
-            srcset="img/weights-tablet.webp 1x, img/weights-tablet@2x.webp 2x">
-          <source type="image/webp" media="(max-width: 1365px)"
-            srcset="img/weights-tablet.png 1x, img/weights-tablet@2x.png 2x">
-          <img src="img/weights-desktop.png" alt="" srcset="img/weights-desktop@2x.png 2x" width="275" height="328">
-        </picture>
-      </div>
+          <picture>
+            <source type="image/webp" media="(max-width: 1365px)"
+              srcset="img/weights-tablet.webp 1x, img/weights-tablet@2x.webp 2x">
+            <source type="image/webp" media="(max-width: 1365px)"
+              srcset="img/weights-tablet.png 1x, img/weights-tablet@2x.png 2x">
+            <img src="img/weights-desktop.png" alt="" srcset="img/weights-desktop@2x.png 2x" width="275" height="328">
+          </picture>
+        </div>
       </section>
       <section class="games">
         <div class="games__container container">
@@ -235,8 +235,8 @@
                     srcset="img/swiper-slide-1-tablet.webp 1x, img/swiper-slide-1-tablet@2x.webp 2x">
                   <source type="image/webp" media="(max-width: 1365px)"
                     srcset="img/swiper-slide-1-tablet.png 1x, img/swiper-slide-1-tablet@2x.png 2x">
-                  <img src="img/swiper-slide-1-desktop.png" alt=""
-                    srcset="img/swiper-slide-1-desktop@2x.png 2x" width="260" height="294">
+                  <img src="img/swiper-slide-1-desktop.png" alt="" srcset="img/swiper-slide-1-desktop@2x.png 2x"
+                    width="260" height="294">
                 </picture>
                 <span class="jury-swiper-name">Анна Павлова</span>
                 <div class="jury-slide-overlay">
@@ -259,8 +259,8 @@
                     srcset="img/swiper-slide-2-tablet.webp 1x, img/swiper-slide-2-tablet@2x.webp 2x">
                   <source type="image/webp" media="(max-width: 1365px)"
                     srcset="img/swiper-slide-2-tablet.png 1x, img/swiper-slide-2-tablet@2x.png 2x">
-                  <img src="img/swiper-slide-2-desktop.png" alt=""
-                    srcset="img/swiper-slide-2-desktop@2x.png 2x" width="260" height="294">
+                  <img src="img/swiper-slide-2-desktop.png" alt="" srcset="img/swiper-slide-2-desktop@2x.png 2x"
+                    width="260" height="294">
                 </picture>
                 <span class="jury-swiper-name">Алексей Лавров</span>
                 <div class="jury-slide-overlay">
@@ -283,8 +283,8 @@
                     srcset="img/swiper-slide-3-tablet.webp 1x, img/swiper-slide-3-tablet@2x.webp 2x">
                   <source type="image/webp" media="(max-width: 1365px)"
                     srcset="img/swiper-slide-3-tablet.png 1x, img/swiper-slide-3-tablet@2x.png 2x">
-                  <img src="img/swiper-slide-3-desktop.png" alt=""
-                    srcset="img/swiper-slide-3-desktop@2x.png 2x" width="260" height="294">
+                  <img src="img/swiper-slide-3-desktop.png" alt="" srcset="img/swiper-slide-3-desktop@2x.png 2x"
+                    width="260" height="294">
                 </picture>
                 <span class="jury-swiper-name">Александр Пашков</span>
                 <div class="jury-slide-overlay">
@@ -307,8 +307,8 @@
                     srcset="img/swiper-slide-4-tablet.webp 1x, img/swiper-slide-4-tablet@2x.webp 2x">
                   <source type="image/webp" media="(max-width: 1365px)"
                     srcset="img/swiper-slide-4-tablet.png 1x, img/swiper-slide-4-tablet@2x.png 2x">
-                  <img src="img/swiper-slide-4-desktop.png" alt=""
-                    srcset="img/swiper-slide-4-desktop@2x.png 2x" width="260" height="294">
+                  <img src="img/swiper-slide-4-desktop.png" alt="" srcset="img/swiper-slide-4-desktop@2x.png 2x"
+                    width="260" height="294">
                 </picture>
                 <span class="jury-swiper-name">Мария Кетова</span>
                 <div class="jury-slide-overlay">
@@ -331,8 +331,8 @@
                     srcset="img/swiper-slide-1-tablet.webp 1x, img/swiper-slide-1-tablet@2x.webp 2x">
                   <source type="image/webp" media="(max-width: 1365px)"
                     srcset="img/swiper-slide-1-tablet.png 1x, img/swiper-slide-1-tablet@2x.png 2x">
-                  <img src="img/swiper-slide-1-desktop.png" alt=""
-                    srcset="img/swiper-slide-1-desktop@2x.png 2x" width="260" height="294">
+                  <img src="img/swiper-slide-1-desktop.png" alt="" srcset="img/swiper-slide-1-desktop@2x.png 2x"
+                    width="260" height="294">
                 </picture>
                 <span class="jury-swiper-name">Мария Васильева</span>
                 <div class="jury-slide-overlay">
@@ -355,8 +355,8 @@
                     srcset="img/swiper-slide-2-tablet.webp 1x, img/swiper-slide-2-tablet@2x.webp 2x">
                   <source type="image/webp" media="(max-width: 1365px)"
                     srcset="img/swiper-slide-2-tablet.png 1x, img/swiper-slide-2-tablet@2x.png 2x">
-                  <img src="img/swiper-slide-2-desktop.png" alt=""
-                    srcset="img/swiper-slide-2-desktop@2x.png 2x" width="260" height="294">
+                  <img src="img/swiper-slide-2-desktop.png" alt="" srcset="img/swiper-slide-2-desktop@2x.png 2x"
+                    width="260" height="294">
                 </picture>
                 <span class="jury-swiper-name">Дмитрий Шолохов</span>
                 <div class="jury-slide-overlay">
@@ -379,8 +379,8 @@
                     srcset="img/swiper-slide-3-tablet.webp 1x, img/swiper-slide-3-tablet@2x.webp 2x">
                   <source type="image/webp" media="(max-width: 1365px)"
                     srcset="img/swiper-slide-3-tablet.png 1x, img/swiper-slide-3-tablet@2x.png 2x">
-                  <img src="img/swiper-slide-3-desktop.png" alt=""
-                    srcset="img/swiper-slide-3-desktop@2x.png 2x" width="260" height="294">
+                  <img src="img/swiper-slide-3-desktop.png" alt="" srcset="img/swiper-slide-3-desktop@2x.png 2x"
+                    width="260" height="294">
                 </picture>
                 <span class="jury-swiper-name">Олег Симонов</span>
                 <div class="jury-slide-overlay">
@@ -403,8 +403,8 @@
                     srcset="img/swiper-slide-4-tablet.webp 1x, img/swiper-slide-4-tablet@2x.webp 2x">
                   <source type="image/webp" media="(max-width: 1365px)"
                     srcset="img/swiper-slide-4-tablet.png 1x, img/swiper-slide-4-tablet@2x.png 2x">
-                  <img src="img/swiper-slide-4-desktop.png" alt=""
-                    srcset="img/swiper-slide-4-desktop@2x.png 2x" width="260" height="294">
+                  <img src="img/swiper-slide-4-desktop.png" alt="" srcset="img/swiper-slide-4-desktop@2x.png 2x"
+                    width="260" height="294">
                 </picture>
                 <span class="jury-swiper-name">Анна Костылева</span>
                 <div class="jury-slide-overlay">
@@ -497,8 +497,8 @@
               <picture>
                 <source type="image/webp" media="(max-width: 767px)"
                   srcset="img/promo-image-mobile.webp 1x, img/promo-image-mobile@2x.webp 2x">
-                  <source type="image/webp" media="(max-width: 1365px)"
-                    srcset="img/promo-image-tablet.webp 1x, img/promo-image-tablet@2x.webp 2x">
+                <source type="image/webp" media="(max-width: 1365px)"
+                  srcset="img/promo-image-tablet.webp 1x, img/promo-image-tablet@2x.webp 2x">
                 <source type="image/png" media="(max-width: 767px)"
                   srcset="img/promo-image-mobile.png 1x, img/promo-image-mobile@2x.png 2x">
                 <source type="image/png" media="(max-width: 1365px)"
