--- a/source/index.html
+++ b/source/index.html
@@ -44,31 +44,31 @@
         <a class="header__telephone" href="tel:8-800-555-55-55">8-800-555-55-55</a>
       </div>
     </header>
-    <main>
-      <section class="intro">
-        <div class="intro__container container">
-          <div class="intro__text-wrapper">
-            <p>Омск</p>
-            <ul>
-              <li>Тренажёрный зал</li>
-              <li>Групповые занятия</li>
-              <li>Кардио-зона</li>
-            </ul>
-            <h2>Фитнес Центр</h2>
-            <a class="intro__button button" href="#subscription">
-              Купить абонемент
-            </a>
-          </div>
-          <picture>
-            <source type="image/webp" media="(max-width: 1365px)"
-              srcset="img/hero-image-tablet.webp 1x, img/hero-image-tablet@2x.webp 2x">
-            <source type="image/webp" media="(max-width: 1365px)"
-              srcset="img/hero-image-tablet.png 1x, img/hero-image-tablet@2x.png 2x">
-            <img src="img/hero-image-desktop.png" srcset="img/hero-image-desktop@2x.png 2x" width="500" height="524"
-              alt="">
-          </picture>
+    <section class="intro">
+      <div class="intro__container container">
+        <div class="intro__text-wrapper">
+          <p>Омск</p>
+          <ul>
+            <li>Тренажёрный зал</li>
+            <li>Групповые занятия</li>
+            <li>Кардио-зона</li>
+          </ul>
+          <h2>Фитнес Центр</h2>
+          <a class="intro__button button" href="#subscription">
+            Купить абонемент
+          </a>
+        </div>
+        <picture>
+          <source type="image/webp" media="(max-width: 1365px)"
+          srcset="img/hero-image-tablet.webp 1x, img/hero-image-tablet@2x.webp 2x">
+          <source type="image/webp" media="(max-width: 1365px)"
+          srcset="img/hero-image-tablet.png 1x, img/hero-image-tablet@2x.png 2x">
+          <img src="img/hero-image-desktop.png" srcset="img/hero-image-desktop@2x.png 2x" width="500" height="524"
+          alt="">
+        </picture>
         </div>
       </section>
+      <main>
       <section class="about">
         <div class="about__container container">
           <div class="about__text-wrapper">
@@ -88,14 +88,12 @@
               <picture>
                 <source type="image/webp" media="(max-width: 767px)"
                   srcset="img/gym-picture-mobile.webp 1x, img/gym-picture-mobile@2x.webp 2x">
-                <source type="image/webp" media="(max-width: 767px)"
-                  srcset="img/gym-picture-mobile.png 1x, img/gym-picture-mobile@2x.png 2x">
-
                 <source type="image/webp" media="(max-width: 1365px)"
                   srcset="img/gym-picture-tablet.webp 1x, img/gym-picture-tablet@2x.webp 2x">
-                <source type="image/webp" media="(max-width: 1365px)"
+                <source type="image/png" media="(max-width: 767px)"
+                  srcset="img/gym-picture-mobile.png 1x, img/gym-picture-mobile@2x.png 2x">
+                <source type="image/png" media="(max-width: 1365px)"
                   srcset="img/gym-picture-tablet.png 1x, img/gym-picture-tablet@2x.png 2x">
-
                 <img src="img/gym-picture-desktop.png" srcset="img/gym-picture-desktop@2x.png 2x" width="660"
                   height="401" alt="">
               </picture>
