--- a/source/index.html
+++ b/source/index.html
@@ -216,7 +216,7 @@
       <section class="jury-swiper">
         <h2 class="jury-title">Жюри</h2>
         <div class="jury-container container" data-swiper="jury-container">
-          <button class="swiper-button-prev button" data-swiper="button-prev">
+          <button class="swiper-button-prev jury-button-prev button" data-swiper="button-prev">
             <svg width="18" height="34">
               <use href="img/sprite.svg#arrow"></use>
             </svg>
@@ -417,7 +417,7 @@
               </div>
             </div>
           </div>
-          <button class="swiper-button-next button" data-swiper="button-next">
+          <button class="swiper-button-next jury-button-next button" data-swiper="button-next">
             <svg width="18" height="34">
               <use href="img/sprite.svg#arrow"></use>
             </svg>
