продолжаем ПП для мобилки 70%

--- a/source/index.html
+++ b/source/index.html
@@ -437,7 +437,7 @@
               </div>
               <div class="advantages__text-wrapper">
                 <h4>Площадь</h4>
-                <p>Занимайтесь без очередей и толкучки</p>
+                <p>Занимайтесь без очередей <br> и толкучки</p>
               </div>
             </li>
             <li>
@@ -464,7 +464,7 @@
               </div>
               <div class="advantages__text-wrapper">
                 <h4>Комфорт</h4>
-                <p>Просторные раздевалки, душевые, фен, Wi-Fi, кулеры</p>
+                <p>Просторные раздевалки,<br> душевые, фен, Wi-Fi, кулеры</p>
               </div>
             </li>
             <li>
