--- a/source/index.html
+++ b/source/index.html
@@ -535,7 +535,7 @@
             <div class="faq__accordion-wrapper is-active" data-target="center">
               <ul>
                 <li data-target="accordion">
-                  <h5>Как стать членом<br> фитнес-центра?</h5>
+                  <h5>Как стать членом <br class="faq_line-breaker-1"> фитнес-центра?</h5>
                   <button class="faq__button button is-opened">Открытая информацию</button>
                   <p data-target="is-opened">При первом посещении и покупке абонемента, необходимо заполнить анкету и
                     подписать договор. При
@@ -555,7 +555,7 @@
                     полотенца, прошедшие термообработку</p>
                 </li>
                 <li data-target="accordion">
-                  <h5>Сколько тренеров работает в клубе и какова <br class="faq__line-breaker"> их квалификация?</h5>
+                  <h5>Сколько тренеров работает в клубе и какова <br class="faq_line-breaker-2"> их квалификация?</h5>
                   <button class="faq__button button">Закрытая Информация</button>
                   <p>в нашем клубе работает 8 тренеров, из которых 7 мастеров спорта и 1 победительница чемпионата мира
                     по
@@ -752,12 +752,12 @@
                 <p class="contacts__description">г. Омск, ул. 60 лет Октября, 7</p>
               </li>
               <li class="contacts__item">
-                <h4 class="contacts__title">Телефон:</h4>
-                <p class="contacts__description">8-800-555-55-55</p>
-              </li>
-              <li class="contacts__item">
                 <h4 class="contacts__title">График работы:</h4>
                 <p class="contacts__description">Пн-Вс: с 8:00 до 22:00</p>
+              </li>
+              <li class="contacts__item">
+                <h4 class="contacts__title">Телефон:</h4>
+                <p class="contacts__description">8-800-555-55-55</p>
               </li>
               <li class="contacts__item">
                 <h4 class="contacts__title">Email:</h4>
