--- a/source/index.html
+++ b/source/index.html
@@ -483,7 +483,7 @@
 
       <section class="promo">
         <h2>Акции</h2>
-        <div class="promo__container">
+        <div class="promo__container container">
           <div class="promo__wrapper">
             <div class="promo__text-wrapper">
               <h4>Год</h4>
