правки по макету (видео и падинги)

--- a/source/index.html
+++ b/source/index.html
@@ -98,7 +98,8 @@
                   height="401" alt="">
               </picture>
             </div>
-            <div class="about__iframe-wrapper">
+            <div class="about__iframe-wrapper" data-video="video-container">
+              <a class="about__iframe-link" href="https://www.youtube.com/watch?v=9TZXsZItgdw&ab_channel=HTMLAcademy" data-video="video-link">
               <picture>
                 <source type="image/webp" media="(max-width: 767px)"
                   srcset="img/video-overlay-mobile.webp 1x, img/video-overlay-mobile@2x.webp 2x">
@@ -109,12 +110,9 @@
                 <source type="image/webp" media="(max-width: 1365px)"
                   srcset="img/video-overlay-tablet.png 1x, img/video-overlay-tablet@2x.png 2x">
                 <img src="img/video-overlay-desktop.png" alt="" srcset="img/video-overlay-desktop@2x.png 2x" width="364"
-                  height="228">
+                  height="228" data-video="video-media">
               </picture>
-              <iframe width="364" height="228"
-                src="https://www.youtube.com/embed/9TZXsZItgdw?si=Xq4Qrh6BZO2c6v0v&?controls=0"
-                title="Бесплатные интерактивные онлайн-курсы." loading="lazy">
-              </iframe>
+            </a>
               <button class="about__iframe-button button">
               </button>
             </div>
@@ -422,7 +420,6 @@
               <use href="img/sprite.svg#arrow"></use>
             </svg>
           </button>
-
         </div>
       </section>
 
