--- a/source/index.html
+++ b/source/index.html
@@ -2,10 +2,10 @@
 <html lang="ru">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Описание проекта">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="Fitness Project" content="Сайт для фитнес центра">
   <link rel="preload" href="fonts/roboto-condensed-v27-cyrillic_latin-regular.woff2" as="font" type="font/woff2"
     crossorigin="anonymous">
   <link rel="preload" href="fonts/roboto-condensed-v27-cyrillic_latin-300.woff2" as="font" type="font/woff2"
@@ -35,6 +35,7 @@
 
 <body>
   <div class="container">
+    <div data-test="hero">
     <header class="header">
       <h1 class="visually-hidden">Просторный тренажерный зал площадью 900 кв/м</h1>
       <div class="header__container">
@@ -68,8 +69,9 @@
         </picture>
         </div>
       </section>
+    </div>
       <main>
-      <section class="about">
+      <section class="about" data-test="about">
         <div class="about__container container">
           <div class="about__text-wrapper">
             <h2>Тренажерный зал</h2>
@@ -120,7 +122,7 @@
         </div>
       </section>
 
-      <section class="subscription" id="subscription">
+      <section class="subscription" id="subscription" data-test="price">
         <div class="subscription__container container">
           <h2 class="subscription__title">Абонементы</h2>
           <div class="subscription__tabs">
@@ -174,7 +176,7 @@
           </picture>
         </div>
       </section>
-      <section class="games">
+      <section class="games" data-test="games">
         <div class="games__container container">
           <div class="games__wrapper">
             <div class="games__content-container">
@@ -423,7 +425,7 @@
         </div>
       </section>
 
-      <section class="advantages">
+      <section class="advantages" data-test="features">
         <div class="advantages__container container">
           <h2>Наши преимущества</h2>
           <ul>
@@ -478,7 +480,7 @@
         </div>
       </section>
 
-      <section class="promo">
+      <section class="promo" data-test="offers">
         <h2>Акции</h2>
         <div class="promo__container container">
           <div class="promo__wrapper">
@@ -507,7 +509,7 @@
             <div class="promo__offer">
               <h4>Месяц бесплатно</h4>
               <p>Приведи друга, получи абонемент в подарок</p>
-              <a class="promo__button promo__button--dark button" type="button" href="#">подробнее</a>
+              <a class="promo__button promo__button--dark button" href="#">подробнее</a>
             </div>
             <div class="promo__offer">
               <h4>Скидка 20%</h4>
@@ -518,7 +520,7 @@
         </div>
       </section>
 
-      <section class="faq">
+      <section class="faq" data-test="faq">
         <h2>Вопросы и ответы</h2>
         <div class="faq__container container">
             <div class="faq__tabs-controls" data-tabs="controls">
@@ -655,7 +657,7 @@
         </div>
       </section>
 
-      <section class="reviews-swiper">
+      <section class="reviews-swiper" data-test="reviews">
         <h2 class="swiper-title">Отзывы</h2>
         <div class="reviews-container container" data-swiper="review-container">
           <button class="swiper-button-prev button reviews-button-prev" data-swiper="button-prev">
@@ -714,18 +716,18 @@
         </div>
       </section>
     </main>
-    <footer class="footer">
+    <footer class="footer" data-test="footer">
       <div class="footer__container container">
         <h2 class="visually-hidden">Контактная информация</h2>
         <div class="footer__form-container form-container" data-form-validate="data-form-validate">
           <form action="https://echo.htmlacademy.ru/" autocomplete="off" method="post">
             <h3 class="footer__header">Бесплатное занятие</h3>
             <div class="form-container__input-container">
-              <div class="form-container__input" placeholder="Имя" data-validate-type="text" data-limitation="name"
+              <div class="form-container__input" data-validate-type="text" data-limitation="name"
                 data-message-base="Заполнение обязательно" data-message-extra="Некорректное заполнение"
-                data-required="data-required" required>
+                data-required="data-required">
                 <label>
-                  <input type="text" name="name" placeholder="Имя">
+                  <input type="text" name="name" placeholder="Имя" required>
                 </label>
               </div>
               <div class="form-container__input" data-validate-type="phone"
@@ -767,6 +769,7 @@
           <a class="nav__image" href="#">
             <img src="img/main-logo.png" alt="" srcset="img/main-logo@2x.png" width="109" height="24">
           </a>
+          <h3 class="visually_hidden">Навигация по сайту</h3>
           <ul class="nav__user-list">
             <li class="nav__user-item"><a class="nav__user-link" href="#">Услуги</a></li>
             <li class="nav__user-item"><a class="nav__user-link" href="#">Абонементы</a></li>
