правки по макету
1) ПП
2) разметка
3) проверка линтами

--- a/source/index.html
+++ b/source/index.html
@@ -448,7 +448,7 @@
                 <p>Вы всегда найдете место для своей машины на нашей парковке</p>
               </div>
             </li>
-            <li data-element="center" class="is-centered">
+            <li class="is-centered" data-element="center">
               <div class="advantages__centered-item">
                 <span>100</span>
                 <span>Тренажеров</span>
@@ -484,7 +484,7 @@
         <div class="promo__container container">
           <div class="promo__wrapper">
             <div class="promo__text-wrapper">
-              <h3>Год</h3>
+              <span>Год</span>
               <span>4999</span>
               <p>Безлимитный абонемент в тренажерный зал</p>
               <a class="promo__button promo__button--white button" href="#">Подробнее</a>
@@ -535,7 +535,7 @@
                 <li data-target="accordion">
                   <h3>Как стать членом <br class="faq__line-breaker-1"> фитнес-центра?</h3>
                   <button class="faq__button button is-opened" type="button">Открытая информацию</button>
-                  <p data-target="is-opened" class="is-opened">При первом посещении и покупке абонемента, необходимо заполнить анкету и
+                  <p class="is-opened" data-target="is-opened">При первом посещении и покупке абонемента, необходимо заполнить анкету и
                     подписать договор. При
                     покупке абонемента онлайн, анкета также заполняется онлайн и договор придет вам на почту.</p>
                 </li>
